# harrow

./: .chizu.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dev.arm64.Dockerfile  docker-compose.yml  mise.toml  perf.arm64.Dockerfile  prod.arm64.Dockerfile  tokio.prod.arm64.Dockerfile
.github/workflows/: ci.yml
docker/: tokio.Dockerfile  tokio.perf.arm64.Dockerfile  tokio.prod.arm64.Dockerfile
docs/: article.md  backend-support.md  connection-safety.md  explicit-extractors.md  features.md  h1-dispatcher-design.md  index.md  middleware-plan.md  middleware.md  opus-review.md  performance.md  profiling-rust-on-linux.md  protocol-backend-strategy.md  roadmap.md  security.md  verification.md
docs/perf/: 2026-04-08-saturation-investigation.md
docs/prds/: harrow-1.0.md  harrow-http-framework.md
harrow/: Cargo.toml
harrow-bench/: Cargo.toml  implementations.toml
harrow-bench/benches/: axum_echo.rs  baseline.toml  body_limit.rs  dispatch.rs  echo.rs  full_stack.rs  matchit_compare.rs  middleware_chain.rs  middleware_compare.rs  perf_isolation.rs  rate_limit.rs  scaling.rs  server_variants.rs  session.rs
harrow-bench/spinr/: brotli-json-10kb-c128.toml  brotli-json-10kb-c32.toml  brotli-json-1kb-c128.toml  brotli-json-1kb-c32.toml  compression-json-10kb-c128.toml  compression-json-10kb-c32.toml  compression-json-1kb-c128.toml  compression-json-1kb-c32.toml  json-10kb-c128.toml  json-10kb-c32.toml  json-1kb-c128.toml  json-1kb-c32.toml  text-c128.toml  (+9 more)
harrow-codec-h1/: Cargo.toml
harrow-core/: Cargo.toml
harrow-core/fuzz/: Cargo.toml
harrow-core/fuzz/fuzz_targets/: fuzz_query_parsing.rs
harrow-core/src/: client.rs  dispatch.rs  handler.rs  lib.rs  middleware.rs  openapi.rs  path.rs  problem.rs  request.rs  response.rs  route.rs  state.rs  ws.rs
harrow-middleware/: Cargo.toml
harrow-o11y/: Cargo.toml
harrow-o11y/src/: lib.rs  o11y_middleware.rs  request_id.rs
harrow-serde/: Cargo.toml
harrow-server/: Cargo.toml
harrow-server-meguri/: Cargo.toml
harrow-server-monoio/: Cargo.toml
harrow-server-tokio/: Cargo.toml
infra/: README.md  instances.tf  main.tf  outputs.tf  security.tf  variables.tf
meguri/: Cargo.toml
meguri/src/: cq.rs  dispatcher.rs  error.rs  lib.rs  reclaim.rs  ring.rs  sq.rs  syscall.rs
meguri/src/ops/: accept.rs  cancel.rs  connect.rs  mod.rs  read.rs  recv.rs  send.rs  timeout.rs  write.rs
scripts/: compare-frameworks.sh  profile-diff.sh  profile.sh
(+1137 files in other folders)
