[package]
name = "harrow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for Harrow: routing, request/response wrappers, middleware"

[features]
default = []
json = ["serde", "serde_json"]
profiling = []

[dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
pin-project-lite = { workspace = true }
matchit = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
hyper-util = { workspace = true }
