[package]
name = "harrow-o11y"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Observability layer for Harrow: tracing spans, metrics, request IDs"

[features]
default = []
profiling = []

[dependencies]
harrow-core = { workspace = true }
rolly = { workspace = true }
tracing = { workspace = true }
